PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.1.0RC6

- Core:
  . Fixded bug #72736 (Slow performance when fetching large dataset with mysqli
    / PDO). (Dmitry)

- PCRE:
  . Fixed bug #73392 (A use-after-free in zend allocator management). 
    (Laruence)

27 Oct 2016, PHP 7.1.0RC5

- Core:
  . Fixed bug #73350 (Exception::__toString() cause circular references).
    (Laruence)
  . Fixed bug #73329 ((Float)"Nano" == NAN). (Anatol)

- CLI Server:
  . Fixed bug #73360 (Unable to work in root with unicode chars). (Anatol)

- SQLite3:
  . Fixed bug #73333 (2147483647 is fetched as string). (cmb)

19 Oct 2016, PHP 7.1.0RC4

- Core:
  . Fixed bug #73288 (Segfault in __clone > Exception.toString > __get).
    (Laruence)
  . Fixed for #73240 (Write out of bounds at number_format). (Stas)
  . Fix pthreads detection when cross-compiling (ffontaine)
  . Fixed bug #73337 (try/catch not working with two exceptions inside a same
    operation). (Dmitry)

- BCmath:
  . Fix bug #73190 (memcpy negative parameter _bc_new_num_ex). (Stas)

- Date:
  . Fixed bug #45554 (Inconsistent behavior of the u format char). (Derick)
  . Fixed bug #48225 (DateTime parser doesn't set microseconds for "now").
    (Derick)
  . Fixed bug #52514 (microseconds are missing in DateTime class). (Derick)
  . Fixed bug #52519 (microseconds in DateInterval are missing). (Derick)
  . Fixed bug #60089 (DateTime::createFromFormat() U after u nukes microtime).
    (Derick)
  . Fixed bug #64887 (Allow DateTime modification with subsecond items).
    (Derick)
  . Fixed bug #68506 (General DateTime improvments needed for microseconds to
    become useful). (Derick)
  . Fixed bug #73109 (timelib_meridian doesn't parse dots correctly). (Derick)
  . Fixed bug #73247 (DateTime constructor does not initialise microseconds
    property). (Derick)