@@ -10,6 +10,10 @@ PHP                                                                        NEWS
   . Fixed bug #73392 (A use-after-free in zend allocator management). 
     (Laruence)
 
+- JSON:
+  . Introduced encoder struct instead of global which fixes bugs #66025 and
+    #73254 related to pretty print indentation. (Jakub Zelenka)
+
 27 Oct 2016, PHP 7.1.0RC5
 
 - Core:
